Finalized _shapefile.html.erb and InspreFactory and Layer modifications

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,6 +4,7 @@ development:
   host:     localhost
   port:     5432
   database: finspweb_dev
+  username: inspire
   pool: 20
 
 test:
@@ -12,6 +13,7 @@ test:
   host:     localhost
   port:     5432
   database: finspweb_dev
+  username: inspire
   pool: 20
 
 production:
@@ -20,4 +22,5 @@ production:
   host:     localhost
   port:     5432
   database: finspweb_dev
+  username: inspire
   pool: 20
