--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ development:
   encoding: unicode
   host:     localhost
   port:     5432
-  database: finspweb_dev
+  database: inspire
   username: inspire
   pool: 20
 
@@ -12,7 +12,7 @@ test:
   encoding: unicode
   host:     localhost
   port:     5432
-  database: finspweb_dev
+  database: inspire
   username: inspire
   pool: 20
 
@@ -21,6 +21,6 @@ production:
   encoding: unicode
   host:     localhost
   port:     5432
-  database: finspweb_dev
+  database: inspire
   username: inspire
   pool: 20
